--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="cardapio">
             <div class="pai-cardapio">
                 <div class="img-cardapio">
-                    <img src="./img/toast.png" alt="teste" class="img2-cardapio">
+                    <img src="./img/drink.png" alt="teste" class="img2-cardapio">
                 </div>
                 <div class="infos-cardapio">
-                    <p class="p-cardapio">teste</p>
+                    <p class="p-cardapio">Cardápio</p>
                 </div>
             </div>
         </div>
@@ -36,10 +36,10 @@
         <div class="promo">
             <div class="pai-promo">
                 <div class="img-promo">
-                    <img src="./img/toast.png" alt="teste" class="img2-promo">
+                    <img src="./img/promo.png" alt="teste" class="img2-promo">
                 </div>
                 <div class="infos-promo">
-                    <p class="p-promo">teste</p>
+                    <p class="p-promo">Promoções do dia</p>
                 </div>
             </div>
         </div>
@@ -49,10 +49,10 @@
         <div class="localizacao">
             <div class="pai-localizacao">
                 <div class="img-localizacao">
-                    <img src="./img/toast.png" alt="teste" class="img2-localizacao">
+                    <img src="./img/localizacao.png" alt="teste" class="img2-localizacao">
                 </div>
                 <div class="infos-localizacao">
-                    <p class="p-localizacao">teste</p>
+                    <p class="p-localizacao">Onde estamos</p>
                 </div>
             </div>
         </div>
@@ -62,29 +62,26 @@
         <div class="comunicacao">
             <div class="pai-comunicacao">
                 <div class="img-comunicacao">
-                    <img src="./img/toast.png" alt="teste" class="img2-comunicacao">
+                    <img src="./img/cominucacao.png" alt="teste" class="img2-comunicacao">
                 </div>
                 <div class="infos-comunicacao">
-                    <p class="p-comunicacao">teste</p>
+                    <p class="p-comunicacao">Fale conosco</p>
                 </div>
             </div>
         </div>
 
-        <div class="sobre">
+        <a href="./sobre/sobre.html"><div class="sobre">
             <div class="pai-sobre">
                 <div class="img-sobre">
-                    <img src="./img/toast.png" alt="teste" class="img2-sobre">
+                    <img src="./img/sobre.png" alt="teste" class="img2-sobre">
                 </div>
                 <div class="infos-sobre">
-                    <p class="p-sobre">teste</p>
+                    <p class="p-sobre">Infos. Adega</p>
                 </div>
             </div>
-        </div>
-
-
-
-
-
+        </div></a>
     </section>
+
+
 </body>
 </html>
