--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="menu">
 
-        <div class="cardapio">
+        <a href=""><div class="cardapio">
             <div class="pai-cardapio">
                 <div class="img-cardapio">
                     <img src="./img/drink.png" alt="teste" class="img2-cardapio">
@@ -30,10 +30,10 @@
                     <p class="p-cardapio">Cardápio</p>
                 </div>
             </div>
-        </div>
+        </div></a>
 
 
-        <div class="promo">
+        <a href=""><div class="promo">
             <div class="pai-promo">
                 <div class="img-promo">
                     <img src="./img/promo.png" alt="teste" class="img2-promo">
@@ -42,11 +42,11 @@
                     <p class="p-promo">Promoções do dia</p>
                 </div>
             </div>
-        </div>
+        </div></a>
 
 
 
-        <div class="localizacao">
+        <a href=""><div class="localizacao">
             <div class="pai-localizacao">
                 <div class="img-localizacao">
                     <img src="./img/localizacao.png" alt="teste" class="img2-localizacao">
@@ -55,11 +55,11 @@
                     <p class="p-localizacao">Onde estamos</p>
                 </div>
             </div>
-        </div>
+        </div></a>
 
 
 
-        <div class="comunicacao">
+        <a href=""><div class="comunicacao">
             <div class="pai-comunicacao">
                 <div class="img-comunicacao">
                     <img src="./img/cominucacao.png" alt="teste" class="img2-comunicacao">
@@ -68,7 +68,7 @@
                     <p class="p-comunicacao">Fale conosco</p>
                 </div>
             </div>
-        </div>
+        </div></a>
 
         <a href="./sobre/sobre.html"><div class="sobre">
             <div class="pai-sobre">
@@ -80,8 +80,16 @@
                 </div>
             </div>
         </div></a>
+
     </section>
 
-
+    <footer>
+        <div class="footer-p">
+            <p class="p-footer">@adega_pointdocentro|2026 ©</p>
+            <p class="p-footer2">Carapicuíba-Centro</p>
+            <p class="p-footer2">Sábado ás 15h</p>
+        </div>
+    </footer>
+   
 </body>
 </html>
