--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>@adega</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
 
     <section class="menu">
 
-        <a href=""><div class="cardapio">
+        <a href="./cardapio/cardapio.html"><div class="cardapio">
             <div class="pai-cardapio">
                 
                 <div class="infos-cardapio">
@@ -42,7 +42,7 @@
 
 
 
-        <a href=""><div class="localizacao">
+        <a href="https://maps.app.goo.gl/edwPHJcRM9hnVNRy9" target="_blank"><div class="localizacao">
             <div class="pai-localizacao">
                
                 <div class="infos-localizacao">
