--- a/cardapio/cardapio.html
+++ b/cardapio/cardapio.html
@@ -11,7 +11,10 @@
     <!-- Swiper -->
 
     <section>
-    <h2>Nosso Cardápio</h2>
+        <div class="divpai1">
+           <div class="imglogo"><img src="../img/logoadega.jpeg" alt="" height="100px" class="imglogopai"></div> 
+            <div class="titlepai"><h2>Nosso Cardápio</h2></div>
+    </div>
     </section>
 
     <section class="cervejas-section">
