--- a/cardapio/cardapio.html
+++ b/cardapio/cardapio.html
@@ -229,6 +229,14 @@
 
 
 
+<footer>
+        <div class="footer-p">
+            <p class="p-footer">@adega_pointdocentro|2026 ©</p>
+            <p class="p-footer2">Carapicuíba-Centro</p>
+            <p class="p-footer2">Sábado ás 15h</p>
+        </div>
+    </footer>
+
 
 
 
