--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div></a>
 
 
-        <a href=""><div class="promo">
+        <a href="./promo/promo.html"><div class="promo">
             <div class="pai-promo">
                 
                 <div class="infos-promo">
