--- a/promo/promo.html
+++ b/promo/promo.html
@@ -43,7 +43,26 @@
       navigation: {
         nextEl: '.swiper-button-next',
         prevEl: '.swiper-button-prev',
-      }
+      },
+
+      breakpoints: {
+        320: {
+          slidesPerView: 1.2,
+          spaceBetween: 10,
+        },
+        480: {
+          slidesPerView: 2.2,
+          spaceBetween: 10,
+        },
+        768: {
+          slidesPerView: 3.2,
+          spaceBetween: 10,
+        },
+        1024: {
+          slidesPerView: 4.5,
+          spaceBetween: 10,
+        },
+      },
     });
   </script>
 
