--- a/promo/promo.html
+++ b/promo/promo.html
@@ -50,23 +50,28 @@
     nextEl: '.swiper-button-next',
     prevEl: '.swiper-button-prev',
   },
-  slidesPerView: 'auto',  // 👈 importante para pegar o width do CSS
-  spaceBetween: 10,        // padrão, será sobrescrito pelos breakpoints
+  slidesPerView: 4,  // default para desktop
+  spaceBetween: 10,
   breakpoints: {
-    320: {
-      spaceBetween: 10,    // telas pequenas
+    320: {   // celulares pequenos
+      slidesPerView: 1.5,
+      spaceBetween: 10,
     },
-    480: {
-      spaceBetween: 1,     // iPhone XR e similares
+    480: {   // iPhone XR
+      slidesPerView: 2.5,   // 👈 aqui você controla quantos circulos aparecem
+      spaceBetween: 10,
     },
-    768: {
-      spaceBetween: 10,    // tablets
+    768: {   // tablets
+      slidesPerView: 3.5,
+      spaceBetween: 10,
     },
-    1024: {
-      spaceBetween: 10,    // desktops
+    1024: {  // desktops
+      slidesPerView: 4.5,
+      spaceBetween: 10,
     },
   },
 });
+
 
   </script>
 
