--- a/promo/promo.html
+++ b/promo/promo.html
@@ -42,6 +42,7 @@
         </div>
     </footer>
 
+
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
    const swiper = new Swiper('.swiper', {
@@ -57,7 +58,8 @@
       spaceBetween: 10,    // telas pequenas
     },
     480: {
-      spaceBetween: 3,     // iPhone XR e similares
+      spaceBetween: 5, 
+      slidesPerView:2.5,    // iPhone XR e similares
     },
     768: {
       spaceBetween: 10,    // tablets
