arrumando cor index

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
 
-        <a href=""><div class="comunicacao">
+        <a href="faleconosco/fale.html"><div class="comunicacao">
             <div class="pai-comunicacao">
                 
                 <div class="infos-comunicacao">
