--- a/promo/promo.html
+++ b/promo/promo.html
@@ -51,21 +51,21 @@
     nextEl: '.swiper-button-next',
     prevEl: '.swiper-button-prev',
   },
-  slidesPerView: 'auto',  // 👈 importante para pegar o width do CSS
-  spaceBetween: 10,        // padrão, será sobrescrito pelos breakpoints
+  slidesPerView: 'auto',  
+  spaceBetween: 10,       
   breakpoints: {
     320: {
-      spaceBetween: 10,    // telas pequenas
+      spaceBetween: 10,    
     },
     480: {
       spaceBetween: 5, 
-      slidesPerView:2.5,    // iPhone XR e similares
+      slidesPerView:2.5,   
     },
     768: {
-      spaceBetween: 10,    // tablets
+      spaceBetween: 10,    
     },
     1024: {
-      spaceBetween: 10,    // desktops
+      spaceBetween: 10,    
     },
   },
 });
