--- a/faleconosco/fale.html
+++ b/faleconosco/fale.html
@@ -35,7 +35,7 @@
 
             <div class="email">
                 <div class="emailf">
-                    <img src="" alt="zap" class="iconemail">
+                    <img src="../img/email.svg" alt="zap" class="iconemail">
                     <p class="email-p">WhatsApp</p>
                 </div>
             </div>
