--- a/faleconosco/fale.html
+++ b/faleconosco/fale.html
@@ -11,7 +11,7 @@
         <div class="faleconosco">
             <div class="zap">
                 <div class="zapf">
-                    <img src="" alt="zap" class="iconzap">
+                    <img src="../img/whatsapp.svg" alt="" class="iconzap" height="24px" width="24px">
                     <p class="zap-p">WhatsApp</p>
                 </div>
             </div>
@@ -19,24 +19,24 @@
 
             <div class="instagram">
                 <div class="insta">
-                    <img src="" alt="zap" class="iconinsta">
-                    <p class="insta-p">WhatsApp</p>
+                    <img src="../img/instagram.svg" alt="" class="iconinsta" height="24px" width="24px">
+                    <p class="insta-p">Instagram</p>
                 </div>
             </div>
 
 
             <div class="facebook">
                 <div class="face">
-                    <img src="" alt="zap" class="iconface">
-                    <p class="face-p">WhatsApp</p>
+                    <img src="../img/facebook.svg" alt="" class="iconface" height="24px" width="24px">
+                    <p class="face-p">Facebook</p>
                 </div>
             </div>
 
 
             <div class="email">
                 <div class="emailf">
-                    <img src="../img/email.svg" alt="zap" class="iconemail">
-                    <p class="email-p">WhatsApp</p>
+                    <img src="../img/email.svg" alt="" class="iconemail" >
+                    <p class="email-p">E-mail</p>
                 </div>
             </div>
 
