--- a/faleconosco/fale.html
+++ b/faleconosco/fale.html
@@ -9,39 +9,48 @@
 <body>
     <section>
         <div class="faleconosco">
-            <div class="zap">
+           <a href="https://web.whatsapp.com/"> <div class="zap">
                 <div class="zapf">
                     <img src="../img/whatsapp.svg" alt="" class="iconzap" height="24px" width="24px">
                     <p class="zap-p">WhatsApp</p>
                 </div>
-            </div>
+            </div></a>
 
 
-            <div class="instagram">
+            <a href="https://www.instagram.com/"><div class="instagram">
                 <div class="insta">
                     <img src="../img/instagram.svg" alt="" class="iconinsta" height="24px" width="24px">
                     <p class="insta-p">Instagram</p>
                 </div>
-            </div>
+            </div></a>
 
 
-            <div class="facebook">
+           <a href="https://www.facebook.com/"> <div class="facebook">
                 <div class="face">
                     <img src="../img/facebook.svg" alt="" class="iconface" height="24px" width="24px">
                     <p class="face-p">Facebook</p>
                 </div>
-            </div>
+            </div></a>
 
 
-            <div class="email">
+            <a href="https://workspace.google.com/"><div class="email">
                 <div class="emailf">
                     <img src="../img/email.svg" alt="" class="iconemail" >
                     <p class="email-p">E-mail</p>
                 </div>
-            </div>
+            </div></a>
 
 
         </div>
     </section>
+
+
+     <footer>
+        <div class="footer-p">
+            <p class="p-footer">@adega_pointdocentro|2026 ©</p>
+            <p class="p-footer2">Carapicuíba-Centro</p>
+            <p class="p-footer2">Sábado ás 15h</p>
+        </div>
+    </footer>
 </body>
 </html>
