--- a/faleconosco/fale.html
+++ b/faleconosco/fale.html
@@ -42,7 +42,13 @@
 
 
         </div>
+
+       
     </section>
+
+     <a href="../index.html"><div class="saida">
+            <img src="../img/logout_.png" alt="">
+        </div></a>
 
 
      <footer>
