--- a/cardapio/cardapio.html
+++ b/cardapio/cardapio.html
@@ -24,7 +24,14 @@
   <div class="swiper-wrapper">
 
     <div class="swiper-slide">
-      <div class="card">Card 1</div>
+      <div class="card">
+        <div>
+        <img src="../img/coronagarrafa.jpg" alt="teste" height="280px">
+        <p class="p-preço">r$ 16,00</p>
+        
+      </div>
+      </div>
+      
     </div>
 
     <div class="swiper-slide">
@@ -35,18 +42,18 @@
       <div class="card">Card 3</div>
     </div>
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 4</div>
     </div>
 
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 5</div>
     </div>
 
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 6</div>
     </div>
 <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 7</div>
     </div>
 
 
@@ -77,18 +84,18 @@
       <div class="card">Card 3</div>
     </div>
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 4</div>
     </div>
 
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 5</div>
     </div>
 
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 6</div>
     </div>
 <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 7</div>
     </div>
 
 
@@ -119,18 +126,18 @@
       <div class="card">Card 3</div>
     </div>
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 4</div>
     </div>
 
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 5</div>
     </div>
 
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 6</div>
     </div>
 <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 7</div>
     </div>
 
 
@@ -161,18 +168,18 @@
       <div class="card">Card 3</div>
     </div>
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 4</div>
     </div>
 
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 5</div>
     </div>
 
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 6</div>
     </div>
 <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 7</div>
     </div>
 
 
@@ -203,18 +210,18 @@
       <div class="card">Card 3</div>
     </div>
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 4</div>
     </div>
 
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 5</div>
     </div>
 
     <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 6</div>
     </div>
 <div class="swiper-slide">
-      <div class="card">Card 3</div>
+      <div class="card">Card 7</div>
     </div>
 
 
